# shIl

./: .gitignore  README.md  file.txt  run.sh
1/: file.txt  output.txt  row-number.sh
2-shell/: .gitignore  2_shell  CMakeLists.txt  main.cpp  main.h  run.sh
2-shell/headers/: Command.h  CommandExecutor.h  Job.h  JobHandler.h  exec.h  main.h  parser.h
2-shell/src/: Command.cpp  CommandExecutor.cpp  Job.cpp  JobHandler.cpp  exec.cpp  main.cpp  parser.cpp
headers/: CommandExecutor.h  Job.h  JobHandler.h
src/: Command.cpp  CommandExecutor.cpp  Job.cpp  JobHandler.cpp  main.cpp
